--- a/blocks/popup/__cancelling-button/popup__cancelling-button.css
+++ b/blocks/popup/__cancelling-button/popup__cancelling-button.css
@@ -1,4 +1,5 @@
 .popup__cancelling-button {
+    cursor: pointer;
     width: 32px;
     height: 32px;
     background-color: rgba(0, 0, 0, 0);
@@ -10,4 +11,19 @@
     position: absolute;
     top: -40px;
     right: -40px;
+}
+
+.popup__cancelling-button:hover {
+    opacity: 0.6;
+    transition: opacity 0.5s;
+}
+
+@media screen and (max-width: 1024px) {
+    .popup__cancelling-button {
+        width: 20px;
+        height: 20px;
+        background-size: 20px;
+        top: -36px;
+        right: 0;
+    }
 }
