--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,3 +1,28 @@
 .popup__submit-button {
-    
+    cursor: pointer;
+    width: 358px;
+    height: 50px;
+    padding: 0;
+    margin: 48px auto 37px;
+    box-sizing: border-box;
+    background-color: #000000;
+    border: none;
+    border-radius: 2px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.popup__submit-button:hover {
+    opacity: 0.8;
+    transition: opacity 0.5s;
+}
+
+@media screen and (max-width: 1024px) {
+    .popup__submit-button {
+        width: 238px;
+        height: 46px;
+    }
 }
