--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,3 +1,16 @@
 .popup__title {
-    
+    padding: 0;
+    margin: 34px auto 0;
+    color: #000000;
+    width: 358px;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+
+}
+
+@media screen and (max-width: 1024px) {
+    .popup__title {
+        width: 238px;
+    }
 }
