--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,5 @@
 .profile__edit-button {
+    cursor: pointer;
     margin: 0;
     padding: 0;
     width: 24px;
@@ -9,6 +10,11 @@
     background-size: 10px;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.profile__edit-button:hover {
+    opacity: 0.6;
+    transition: opacity 0.5s;
 }
 
 @media screen and (max-width: 1024px) {
