--- a/pages/index.css
+++ b/pages/index.css
@@ -24,5 +24,6 @@
 @import url(../blocks/popup/__cancelling-button/popup__cancelling-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__fields/popup__fields.css);
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
