--- a/blocks/popup/__box/popup__box.css
+++ b/blocks/popup/__box/popup__box.css
@@ -1,6 +1,5 @@
 .popup__box {
     width: 430px;
-    min-height: 330px;
     padding: 0;
     margin: auto;
     box-sizing: border-box;
@@ -9,11 +8,11 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 1024px) {
     .popup__box {
         width: 282px;
-        min-height: 322px;
     }
 }
