--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,6 +1,7 @@
 .popup__field {
     width: 354px;
-    margin: 54px auto 0;
+    margin: 0;
+    padding-bottom: 7px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     font-weight: 400;
