--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -23,6 +23,9 @@
 @media screen and (max-width: 1024px) {
     .popup__submit-button {
         width: 238px;
-        height: 46px;
+        height: 46px;    
+        margin: 45px auto 25px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
