--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -22,5 +22,8 @@
         width: 18px;
         height: 18px;
         background-size: 7.5px;
+        position: absolute;
+        top: 8px;
+        right: 19px;
     }
 }
