--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,5 +7,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    display: none;
+    display: flex;
+    visibility: hidden; 
+    opacity: 0; 
+    transition: opacity 0.4s, visibility 0.4s;
 }
+
