--- a/src/blocks/popup/__profile-button/popup__profile-button.css
+++ b/src/blocks/popup/__profile-button/popup__profile-button.css
@@ -1,4 +1,4 @@
-.popup__submit-profile-button {
+.popup__profile-button {
     cursor: pointer;
     width: 358px;
     height: 50px;
@@ -15,13 +15,13 @@
     color: #FFFFFF;
 }
 
-.popup__submit-profile-button:hover {
+.popup__profile-button:hover {
     opacity: 0.8;
     transition: opacity 0.5s;
 }
 
 @media screen and (max-width: 1024px) {
-    .popup__submit-profile-button {
+    .popup__profile-button {
         width: 238px;
         height: 46px;    
         margin: 45px auto 25px;
