--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -12,6 +13,8 @@
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__container/element__container.css);
+@import url(../blocks/element/__munber-of-likes/element__munber-of-likes.css);
 @import url(../blocks/element/__delete-button/element__delete-button.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__info-box/element__info-box.css);
@@ -36,9 +39,9 @@
 @import url(../blocks/popup/__field-error/_active/popup__field-error_active.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__profile-button/popup__profile-button.css);
+@import url(../blocks/popup/__avatar-button/popup__avatar-button.css);
 @import url(../blocks/popup/__card-button/popup__card-button.css);
 @import url(../blocks/popup/__button_disabled/popup__button_disabled.css);
-
 
 
 
