--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -1,21 +1,26 @@
 .elements {
-    max-width: 880px;
-    margin: 0 auto;
-    padding: 0;
+    margin: 0 auto 66px auto;
     padding-top: 50px;
-    box-sizing: border-box;
+    max-width: 880px;
     display: grid;
-    grid-template-columns: repeat(3, 282px);
-    grid-template-rows: repeat(2, 361px);
-    column-gap: 17px;
-    row-gap: 20px;
-}
-
-@media screen and (max-width: 1024px) {
+    grid-template-columns: repeat(auto-fit, 282px);
+    gap: 20px 17px;
+    box-sizing: border-box;
+    }
+    
+    @media screen and (max-width: 929px) {
     .elements {
-        padding-top: 36px;
-        width: max-content;
-        grid-template-columns: 282px;
-        grid-template-rows: repeat(6, 361px);
+      max-width: 600px;
+      padding-top: 36px;
+      justify-content: center;
+    }
+    }
+    
+    @media screen and (max-width: 644px) {
+    .elements {
+      margin: 0 auto 48px auto;
+      max-width: 282px;
     }
 }
+
+
